Good results. Check label checks for correctness of time distance map

--- a/training_model_v1 coords.ipynb
+++ b/training_model_v1 coords.ipynb
@@ -52,6 +52,8 @@
     "        # exp = 3 # uses past deforestation mask until 2020, which is a mistake. use it until 2018\n",
     "        exp = 4 # uses past deforestation mask without dates.\n",
     "        exp = 5 # uses past deforestation mask with dates. 38 epochs.\n",
+    "\n",
+    "        exp = 6 # mAP 89.9\n",
     "        \n",
     "else:\n",
     "    exp = 6 # dummy"
