Fixed fixed time distance map. High mAP with correct map.

--- a/training_model_v1.ipynb
+++ b/training_model_v1.ipynb
@@ -39,9 +39,9 @@
    "outputs": [],
    "source": [
     "dataset = ParaDeforestationTime()\n",
-    "training = False\n",
+    "training = True\n",
     "save_probabilities = True\n",
-    "loadInference = True\n",
+    "loadInference = False\n",
     "if training == False:\n",
     "    if type(dataset) == Para:\n",
     "        exp = 2\n",
@@ -53,10 +53,11 @@
     "        exp = 5 # fixes mask.\n",
     "        exp = 6 # uses past deforestation distance and past deforestation. didnt test it yet        \n",
     "        exp = 8 # Uses fixed past deforestation distance and past deforestation. 98.9 mAP\n",
+    "        exp = 9 # dummy for coords. high mAP. 99.8.        \n",
     "    if type(dataset) == ParaDistanceMap:\n",
     "        exp = 7 # not so good result.\n",
     "else:\n",
-    "    exp = 9"
+    "    exp = 10 # using fixed fixed past deforestation distance"
    ]
   },
   {
