Fixed date ID in coord train val extraction

--- a/training_model_v1 coords.ipynb
+++ b/training_model_v1 coords.ipynb
@@ -79,7 +79,7 @@
     "\tpatchesHandler = PatchesHandlerMultipleDates(\n",
     "\t\taddPastDeforestationInput)\n",
     "\n",
-    "training = False\n",
+    "training = True\n",
     "save_probabilities = True\n",
     "loadInference = False\n",
     "if training == False:\n",
@@ -100,7 +100,7 @@
     "\tif type(dataset) == ParaMultipleDates:\n",
     "\t\texp = 11 # Multiple dates. using fixed fixed past deforestation distance\n",
     "else:\n",
-    "\texp = 11 # Multiple dates. using fixed fixed past deforestation distance"
+    "\texp = 12 # Multiple dates. using fixed fixed past deforestation distance"
    ]
   },
   {
@@ -399,7 +399,19 @@
    "execution_count": 12,
    "id": "45271c3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| im_idx_row.shape: (17730, 9200, 1)\n",
+      "    im_idx_col.shape: (17730, 9200, 1)\n",
+      "ic| im_idx_row.dtype: dtype('uint16')\n",
+      "    im_idx_col.dtype: dtype('uint16')\n",
+      "ic| im_idx.shape: (17730, 9200, 2), im_idx.dtype: dtype('uint16')\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "patch_size = 128\n",
@@ -416,7 +428,24 @@
    "execution_count": 13,
    "id": "4b985b62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| coords.shape: (464, 239, 1, 128, 128, 2)\n",
+      "    coords.dtype: dtype('uint16')\n",
+      "ic| coords.shape: (110896, 2), coords.dtype: dtype('uint16')\n",
+      "ic| coords_current_date_train.shape: (41812, 2)\n",
+      "    coords_past_date_train.shape: (110896, 2)\n",
+      "ic| coords_current_date_train[20]: array([  0, 760], dtype=uint16)\n",
+      "ic| coords_current_date_train[20]: array([  0, 760,   0], dtype=uint16)\n",
+      "ic| coords_current_date_train.shape: (41812, 3)\n",
+      "    coords_past_date_train.shape: (110896, 3)\n",
+      "ic| coords_train.shape: (152708, 3), coords_val.shape: (10260, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib\n",
     "if training == True:\n",
@@ -522,10 +551,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "76199f57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training samples:  (12784, 3) validation samples:  (1242, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "if training == True:\n",
     "\n",
@@ -536,6 +573,29 @@
     "\t\t\tpatch_size, pertentage = 0.2)\n",
     "    print('training samples: ', coords_train.shape, \n",
     "\t\t\t'validation samples: ', coords_val.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eab27e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2736 3192    1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "if type(dataset) == ParaMultipleDates:\n",
+    "    checkPatch = True\n",
+    "    print(coords_train[6000])\n",
+    "    image_patch = image_stack[...,patchesHandler.image_channels[-1]]\n",
+    "'''"
    ]
   },
   {
