exp 72 gives 81.4 f1 to Para training without current date

--- a/training_model_v1 coords.ipynb
+++ b/training_model_v1 coords.ipynb
@@ -63,9 +63,9 @@
     "\tpatchesHandler = PatchesHandlerMultipleDates(\n",
     "\t\tdataset)\n",
     "\n",
-    "training = True\n",
-    "save_probabilities = False\n",
-    "loadInference = False\n",
+    "training = False\n",
+    "save_probabilities = True\n",
+    "loadInference = True\n",
     "if training == False:\n",
     "\tif type(dataset) == Para:\n",
     "\t\texp = 2\n",
@@ -90,10 +90,19 @@
     "\t\t# exp = 54\n",
     "\t\texp = 56\n",
     "\t\texp = 58\n",
+    "\t\t# exp = 63\n",
+    "\t\t# exp = 52\n",
+    "\t\t# exp = 64\n",
+    "\t\t# exp = 66\n",
+    "\t\texp = 66\n",
+    "\t\texp = 68\n",
+    "\t\t# exp = 69\n",
+    "\t\t# exp = 70\n",
+    "\t\texp = 72\n",
     "\n",
     "else:\n",
     "\texp = 13 # Multiple dates. using fixed fixed past deforestation distance\n",
-    "\texp = 61"
+    "\texp = 72"
    ]
   },
   {
