--- a/training_model_v1 coords.ipynb
+++ b/training_model_v1 coords.ipynb
@@ -27,7 +27,10 @@
     "import sys\n",
     "import numpy as np\n",
     "from src import metrics as _metrics\n",
-    "from src.dataset import Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates\n",
+    "from src.dataset import (\n",
+    "    Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates,\n",
+    "    MTDeforestationTime\n",
+    ")\n",
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates\n"
    ]
@@ -99,6 +102,8 @@
     "\t\t# exp = 69\n",
     "\t\t# exp = 70\n",
     "\t\texp = 72\n",
+    "\tif type(dataset) == MTDeforestationTime:\n",
+    "\t\texp = 28\n",
     "\n",
     "else:\n",
     "\texp = 13 # Multiple dates. using fixed fixed past deforestation distance\n",
@@ -2379,9 +2384,7 @@
     "        recall = round(recall_score(label_mask_current_deforestation_test, predicted_test)*100, 2)\n",
     "\n",
     "        mAP = round(metrics.average_precision_score(label_mask_current_deforestation_test, \n",
-    "                mean_prob_test)*100, 2)\n",
-    "\n",
-    "        ic(f1, precision, recall, mAP)"
+    "                mean_prob_test)*100, 2)\n"
    ]
   },
   {
@@ -3438,14 +3441,6 @@
     "predicted_thresholded = predicted_thresholded.astype(np.uint8)\n",
     "ic(predicted_thresholded.shape)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3512af5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
