Fixed PA class. Refactor raster py files

--- a/check_PA_label.ipynb
+++ b/check_PA_label.ipynb
@@ -18,7 +18,7 @@
     "from src import metrics as _metrics\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates,\n",
+    "    Para, PADeforestationTime, PADistanceMap, PAMultipleDates,\n",
     "    MTDeforestationTime,\n",
     "    MTMultipleDates\n",
     ")\n",
@@ -46,7 +46,7 @@
    "source": [
     "addPastDeforestationInput = True\n",
     "\n",
-    "dataset = ParaMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "dataset = PAMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
     "\taddPastDeforestationInput = addPastDeforestationInput,\n",
     "\tborderBuffer = 2)\t"
    ]
