--- a/check_cloud_mask.ipynb
+++ b/check_cloud_mask.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from icecream import ic\n",
-    "from src.dataset import Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates\n",
+    "from src.dataset import PA, PADeforestationTime, PADistanceMap, PAMultipleDates\n",
     "from osgeo import gdal\n",
     "import src.plot as _plt\n"
    ]
@@ -95,7 +95,7 @@
    ],
    "source": [
     "addPastDeforestationInput = True\n",
-    "dataset = ParaMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]\n",
+    "dataset = PAMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]\n",
     "\taddPastDeforestationInput = addPastDeforestationInput,\n",
     "\tborderBuffer = 2)"
    ]
