--- a/check_label.ipynb
+++ b/check_label.ipynb
@@ -12,7 +12,7 @@
     "import sys\n",
     "import numpy as np\n",
     "from icecream import ic\n",
-    "from src.dataset import Para, ParaDeforestationTime, ParaMultipleDates\n"
+    "from src.dataset import PA, PADeforestationTime, PAMultipleDates\n"
    ]
   },
   {
@@ -22,9 +22,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "# dataset = ParaDeforestationTime()\n",
+    "# dataset = PADeforestationTime()\n",
     "addPastDeforestationInput = True\n",
-    "dataset = ParaMultipleDates(addPastDeforestationInput)\n"
+    "dataset = PAMultipleDates(addPastDeforestationInput)\n"
    ]
   },
   {
@@ -204,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "\"\\nif type(dataset) == ParaDeforestationTime:\\n        plt.figure(figsize = (12,12))\\n        plt.axis('off')\\n        plt.imshow(image_stack[...,0].astype(np.int8), cmap = plt.cm.gray)\\n        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_pastDeforestation.png',\\n                dpi = 150, bbox_inches = 'tight')\\n\""
+       "\"\\nif type(dataset) == PADeforestationTime:\\n        plt.figure(figsize = (12,12))\\n        plt.axis('off')\\n        plt.imshow(image_stack[...,0].astype(np.int8), cmap = plt.cm.gray)\\n        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_pastDeforestation.png',\\n                dpi = 150, bbox_inches = 'tight')\\n\""
       ]
      },
      "execution_count": 6,
@@ -215,7 +215,7 @@
    "source": [
     "\n",
     "'''\n",
-    "if type(dataset) == ParaDeforestationTime:\n",
+    "if type(dataset) == PADeforestationTime:\n",
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(image_stack[...,0].astype(np.int8), cmap = plt.cm.gray)\n",
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaDeforestationTime:\n",
+    "if type(dataset) == PADeforestationTime:\n",
     "\n",
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
@@ -259,7 +259,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "if type(dataset) == ParaDeforestationTime:\n",
+    "if type(dataset) == PADeforestationTime:\n",
     "\n",
     "        current_deforestation = label_mask.copy()\n",
     "        current_deforestation[current_deforestation == 2] = 0\n",
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaDeforestationTime:\n",
+    "if type(dataset) == PADeforestationTime:\n",
     "\n",
     "\tic(np.unique(current_deforestation_in_year_disance, return_counts=True))"
    ]
@@ -569,7 +569,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(label_mask[...,0], cmap=plt.cm.gray)\n",
@@ -597,7 +597,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(label_mask[...,1], cmap=plt.cm.gray)"
@@ -622,7 +622,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(image_stack[...,0], cmap=plt.cm.gray)"
@@ -647,7 +647,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(image_stack[...,1], cmap=plt.cm.gray)"
@@ -672,7 +672,7 @@
     }
    ],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(image_stack[...,22], cmap=plt.cm.gray)"
