--- a/check_label_buffer.ipynb
+++ b/check_label_buffer.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from icecream import ic\n",
-    "from src.dataset import Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates, MTMultipleDates\n",
+    "from src.dataset import PA, PADeforestationTime, PADistanceMap, PAMultipleDates, MTMultipleDates\n",
     "import src.plot as _plt\n"
    ]
   },
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "dataset_not_independent = ParaDeforestationTime()\n",
+    "dataset_not_independent = PADeforestationTime()\n",
     "# Loading reference\n",
     "label_mask_not_independent = dataset_not_independent.loadLabel()\n",
     "print('Mask label shape: ', '\\n', label_mask_not_independent.shape, '\\n', 'Unique values: ', '\\n', np.unique(label_mask_not_independent, return_counts=True))"
@@ -62,7 +62,7 @@
    ],
    "source": [
     "addPastDeforestationInput = True\n",
-    "dataset = ParaMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]\n",
+    "dataset = PAMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]\n",
     "\taddPastDeforestationInput = addPastDeforestationInput,\n",
     "\tborderBuffer = 2)"
    ]
