--- a/check_label_past_deforestation.ipynb
+++ b/check_label_past_deforestation.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from icecream import ic\n",
-    "from src.dataset import Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates, MTMultipleDates\n",
+    "from src.dataset import PA, PADeforestationTime, PADistanceMap, PAMultipleDates, MTMultipleDates\n",
     "import src.plot as _plt\n",
     "import utils_v1"
    ]
