--- a/polygon_analysis.ipynb
+++ b/polygon_analysis.ipynb
@@ -20,7 +20,7 @@
     "from src import metrics as _metrics\n",
     "from src.dataset import (\n",
     "    DeforestationTime, MultipleDates,\n",
-    "    Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates, \n",
+    "    Para, PADeforestationTime, PADistanceMap, PAMultipleDates, \n",
     "    MT, MTDeforestationTime, MTMultipleDates\n",
     ")\n",
     "from src import training_generator as generator\n",
@@ -53,7 +53,7 @@
     "\n",
     "# threshold_uncertainty = 0.15\n",
     "\n",
-    "# dataset = ParaMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]\n",
+    "# dataset = PAMultipleDates(dates = [2018, 2019], # dates = [2017, 2018, 2019]\n",
     "# \taddPastDeforestationInput = addPastDeforestationInput,\n",
     "# \tborderBuffer = 2)\n",
     "dataset = MTMultipleDates(dates = [2019, 2020], # dates = [2016,2017,2018,2019]\n",
@@ -69,7 +69,7 @@
     "save_probabilities = True\n",
     "loadInference = True\n",
     "\n",
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\texp = 11 # Multiple dates. using fixed fixed past deforestation distance\n",
     "\texp = 22\n",
     "\texp = 50\n",
@@ -88,7 +88,7 @@
     "\texp = 72\n",
     "if type(dataset) == MTDeforestationTime:\n",
     "\texp = 28\n",
-    "elif type(dataset) == ParaMultipleDates:\n",
+    "elif type(dataset) == PAMultipleDates:\n",
     "\t# exp = 72 # train 2015-2018\n",
     "\t# exp = 69 # train 2016-2018\n",
     "\t# exp = 70 # train 2017-2018\n",
@@ -2193,7 +2193,7 @@
     "    bin_n = 435\n",
     "    bin_n = 452\n",
     "\n",
-    "elif issubclass(type(dataset), Para):\n",
+    "elif issubclass(type(dataset), PA):\n",
     "    bin_n = 140\n",
     "    bin_n = 113\n",
     "\n",
