--- a/training_model_v1 ensemble.ipynb
+++ b/training_model_v1 ensemble.ipynb
@@ -30,7 +30,7 @@
     "import src.loss as loss\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates,\n",
+    "    Para, PADeforestationTime, PADistanceMap, PAMultipleDates,\n",
     "    MT, MTDeforestationTime,\n",
     "    MTMultipleDates\n",
     ")\n",
@@ -103,7 +103,7 @@
     "\tdates = [2019, 2020]\n",
     "'''\n",
     "# dates = [2018, 2019]\n",
-    "# dataset = ParaMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "# dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
     "# \taddPastDeforestationInput = addPastDeforestationInput,\n",
     "# \tborderBuffer = 2)\t\n",
     "dates = [2019, 2020]\n",
@@ -123,7 +123,7 @@
     "if training == False:\n",
     "\n",
     "\n",
-    "\tif type(dataset) == ParaMultipleDates:\n",
+    "\tif type(dataset) == PAMultipleDates:\n",
     "\t\texp_ids = [103, 104, 105, 106, 107, 118, 119, 120, 121, 122]\n",
     "\t\texp_ids = [123, 124, 125, 126, 127, 128, 129, 131, 1122, 1121]\n",
     "\n",
@@ -624,7 +624,7 @@
    "source": [
     "\n",
     "plt.figure(figsize=(15,15))\n",
-    "if type(dataset) != ParaDeforestationTime and type(dataset) != MTDeforestationTime:\n",
+    "if type(dataset) != PADeforestationTime and type(dataset) != MTDeforestationTime:\n",
     "    plt.imshow(label_mask[...,-1], cmap=plt.cm.gray)\n",
     "else:\n",
     "    plt.imshow(label_mask, cmap=plt.cm.gray)\n",
@@ -1179,7 +1179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if type(dataset) != ParaDeforestationTime and type(dataset) != MTDeforestationTime:\n",
+    "if type(dataset) != PADeforestationTime and type(dataset) != MTDeforestationTime:\n",
     "    patchesHandler.dataset.image_channels[-1]"
    ]
   },
@@ -1190,7 +1190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tchannels = patchesHandler.input_image_shape\n",
     "\timage_stack = image_stack[..., patchesHandler.dataset.image_channels[-1]]\n",
     "\tlabel_mask = label_mask[...,-1]"
@@ -5563,7 +5563,7 @@
     "threshold_list2 = [0.0825] # exp 77 PA 3 runs\n",
     "\n",
     "if predictor == Predictor.pred_entropy:\n",
-    "        if issubclass(type(dataset), Para):\n",
+    "        if issubclass(type(dataset), PA):\n",
     "                threshold_list2 = [0.163]\n",
     "                threshold_list2 = [0.151]\n",
     "\n",
