--- a/training_model_v1 evidential.ipynb
+++ b/training_model_v1 evidential.ipynb
@@ -31,7 +31,7 @@
     "import src.loss as loss\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    Para, ParaDeforestationTime, ParaDistanceMap, ParaMultipleDates,\n",
+    "    Para, PADeforestationTime, PADistanceMap, PAMultipleDates,\n",
     "    MTDeforestationTime,\n",
     "    MTMultipleDates\n",
     ")\n",
@@ -94,7 +94,7 @@
     "loadInference = False\n",
     "\n",
     "\n",
-    "# dataset = ParaDeforestationTime()\n",
+    "# dataset = PADeforestationTime()\n",
     "addPastDeforestationInput = True\n",
     "'''\n",
     "if training == True:\n",
@@ -108,7 +108,7 @@
     "'''\n",
     "dates = [2018, 2019]\n",
     "ic(dates)\n",
-    "dataset = ParaMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
     "\taddPastDeforestationInput = addPastDeforestationInput,\n",
     "\tborderBuffer = 2)\t\n",
     "# dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
@@ -116,7 +116,7 @@
     "# \tborderBuffer = 2)\t\n",
     "# dataset = MTDeforestationTime()\t\n",
     "# [2016, 2017, 2018]\n",
-    "# dataset = Para()\n",
+    "# dataset = PA()\n",
     "if issubclass(type(dataset), MultipleDates):\n",
     "\tpatchesHandler = PatchesHandlerEvidential(\n",
     "\t\tdataset)\n",
@@ -130,7 +130,7 @@
     "\tif type(dataset) == Para:\n",
     "\t\texp = 2\n",
     "\n",
-    "\tif type(dataset) == ParaDeforestationTime:\n",
+    "\tif type(dataset) == PADeforestationTime:\n",
     "\t\t# exp = 3 # uses past deforestation mask until 2020, which is a mistake. use it until 2018\n",
     "\t\texp = 4 # uses past deforestation mask without dates.\n",
     "\t\texp = 5 # uses past deforestation mask with dates. 38 epochs.\n",
@@ -140,9 +140,9 @@
     "\t\texp = 9 # dummy for coords. high mAP. 99.8.   \n",
     "\t\texp = 10 # using fixed fixed past deforestation distance. mAP 90.7   \n",
     "\t\texp = 12 # Multiple dates. using fixed fixed past deforestation distance. mAP reduced to 89.6\n",
-    "\tif type(dataset) == ParaDistanceMap:\n",
+    "\tif type(dataset) == PADistanceMap:\n",
     "\t\texp = 7 # not so good result.\n",
-    "\tif type(dataset) == ParaMultipleDates:\n",
+    "\tif type(dataset) == PAMultipleDates:\n",
     "\t\texp = 11 # Multiple dates. using fixed fixed past deforestation distance\n",
     "\t\texp = 22\n",
     "\t\texp = 50\n",
@@ -732,7 +732,7 @@
    "source": [
     "\n",
     "plt.figure(figsize=(15,15))\n",
-    "if type(dataset) != ParaDeforestationTime and type(dataset) != MTDeforestationTime:\n",
+    "if type(dataset) != PADeforestationTime and type(dataset) != MTDeforestationTime:\n",
     "    plt.imshow(label_mask[...,-1], cmap=plt.cm.gray)\n",
     "else:\n",
     "    plt.imshow(label_mask, cmap=plt.cm.gray)\n",
@@ -2090,7 +2090,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if type(dataset) != ParaDeforestationTime and type(dataset) != MTDeforestationTime:\n",
+    "if type(dataset) != PADeforestationTime and type(dataset) != MTDeforestationTime:\n",
     "    patchesHandler.dataset.image_channels[-1]"
    ]
   },
@@ -2101,7 +2101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if type(dataset) == ParaMultipleDates:\n",
+    "if type(dataset) == PAMultipleDates:\n",
     "\tchannels = patchesHandler.input_image_shape\n",
     "\timage_stack = image_stack[..., patchesHandler.dataset.image_channels[-1]]\n",
     "\tlabel_mask = label_mask[...,-1]"
