--- a/check_PA_label.ipynb
+++ b/check_PA_label.ipynb
@@ -18,7 +18,7 @@
     "from src import metrics as _metrics\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    Para, PADeforestationTime, PADistanceMap, PAMultipleDates,\n",
+    "    PA, PADeforestationTime, PADistanceMap, PAMultipleDates,\n",
     "    MTDeforestationTime,\n",
     "    MTMultipleDates\n",
     ")\n",
