Ok for ensemble inference and evidential grid search

--- a/check_cloud_mask.ipynb
+++ b/check_cloud_mask.ipynb
@@ -76,7 +76,7 @@
     "plt.imshow(label_with_cloud_mask, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "# plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -259,7 +259,7 @@
     "plt.imshow(label_mask, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -364,7 +364,7 @@
     "plt.imshow(cirrus_t0, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -432,7 +432,7 @@
     "plt.imshow(thin_cloud_mask, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -480,7 +480,7 @@
     "plt.imshow(label_mask_with_thresholded_clouds, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -536,7 +536,7 @@
     "plt.imshow(dif, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "# plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
