--- a/check_label.ipynb
+++ b/check_label.ipynb
@@ -156,7 +156,7 @@
     "plt.figure(figsize = (12,12))\n",
     "plt.axis('off')\n",
     "plt.imshow(label_mask, cmap=plt.cm.gray)\n",
-    "plt.savefig('figures/' + dataset.__class__.__name__ + 'check_LabelMask.png',\n",
+    "plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_LabelMask.png',\n",
     "        dpi = 150, bbox_inches = 'tight')\n",
     "        "
    ]
@@ -204,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "\"\\nif type(dataset) == PADeforestationTime:\\n        plt.figure(figsize = (12,12))\\n        plt.axis('off')\\n        plt.imshow(image_stack[...,0].astype(np.int8), cmap = plt.cm.gray)\\n        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_pastDeforestation.png',\\n                dpi = 150, bbox_inches = 'tight')\\n\""
+       "\"\\nif type(dataset) == PADeforestationTime:\\n        plt.figure(figsize = (12,12))\\n        plt.axis('off')\\n        plt.imshow(image_stack[...,0].astype(np.int8), cmap = plt.cm.gray)\\n        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_pastDeforestation.png',\\n                dpi = 150, bbox_inches = 'tight')\\n\""
       ]
      },
      "execution_count": 6,
@@ -219,7 +219,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(image_stack[...,0].astype(np.int8), cmap = plt.cm.gray)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_pastDeforestation.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_pastDeforestation.png',\n",
     "                dpi = 150, bbox_inches = 'tight')\n",
     "'''\n"
    ]
@@ -248,7 +248,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(image_stack[...,0], cmap = plt.cm.gray)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_deforestationYearDistance.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_deforestationYearDistance.png',\n",
     "                dpi = 150, bbox_inches = 'tight')\n"
    ]
   },
@@ -366,7 +366,7 @@
     "plt.figure(figsize = (12,12))\n",
     "plt.axis('off')\n",
     "plt.imshow(current_deforestation, cmap = plt.cm.gray)\n",
-    "# plt.savefig('figures/' + dataset.__class__.__name__ + 'check_deforestationYearDistance.png',\n",
+    "# plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_deforestationYearDistance.png',\n",
     "#         dpi = 150, bbox_inches = 'tight')\n"
    ]
   },
@@ -393,7 +393,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(distance_map)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_distanceMapPastDeforestation.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_distanceMapPastDeforestation.png',\n",
     "                dpi = 150, bbox_inches = 'tight')\n"
    ]
   },
@@ -407,7 +407,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(label_past_deforestation, cmap = plt.cm.gray)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_PastDeforestation.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_PastDeforestation.png',\n",
     "                dpi = 150, bbox_inches = 'tight')"
    ]
   },
@@ -459,7 +459,7 @@
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(distance_map_2018)\n",
-    "\tplt.savefig('figures/' + dataset.__class__.__name__ + 'check_distanceMapDeforestation2018.png',\n",
+    "\tplt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_distanceMapDeforestation2018.png',\n",
     "\t\t\tdpi = 150, bbox_inches = 'tight')\n",
     "\n",
     "\tnp.save(dataset.paths.distance_map_past_deforestation_2018, distance_map_2018)"
@@ -475,7 +475,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(deforestation_2018, cmap = plt.cm.gray)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_Deforestation2018.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_Deforestation2018.png',\n",
     "                dpi = 150, bbox_inches = 'tight')"
    ]
   },
@@ -495,7 +495,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.imshow(distance_map_2017)\n",
     "        plt.axis('off')\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_distanceMapDeforestation2017.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_distanceMapDeforestation2017.png',\n",
     "                dpi = 150, bbox_inches = 'tight')\n",
     "        np.save(dataset.paths.distance_map_past_deforestation_2017, distance_map_2017)\n"
    ]
@@ -510,7 +510,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(deforestation_2017, cmap = plt.cm.gray)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_Deforestation2017.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_Deforestation2017.png',\n",
     "                dpi = 150, bbox_inches = 'tight')"
    ]
   },
@@ -530,7 +530,7 @@
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(distance_map_2016)\n",
-    "\tplt.savefig('figures/' + dataset.__class__.__name__ + 'check_distanceMapDeforestation2016.png',\n",
+    "\tplt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_distanceMapDeforestation2016.png',\n",
     "\t\t\tdpi = 150, bbox_inches = 'tight')\n",
     "\n",
     "\tnp.save(dataset.paths.distance_map_past_deforestation_2016, distance_map_2016)\n"
@@ -546,7 +546,7 @@
     "        plt.figure(figsize = (12,12))\n",
     "        plt.axis('off')\n",
     "        plt.imshow(deforestation_2016, cmap = plt.cm.gray)\n",
-    "        plt.savefig('figures/' + dataset.__class__.__name__ + 'check_Deforestation2016.png',\n",
+    "        plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_Deforestation2016.png',\n",
     "                dpi = 150, bbox_inches = 'tight')"
    ]
   },
@@ -573,7 +573,7 @@
     "\tplt.figure(figsize = (12,12))\n",
     "\tplt.axis('off')\n",
     "\tplt.imshow(label_mask[...,0], cmap=plt.cm.gray)\n",
-    "\t# plt.savefig('figures/' + dataset.__class__.__name__ + 'check_LabelMask.png',\n",
+    "\t# plt.savefig('output/figures/' + dataset.__class__.__name__ + 'check_LabelMask.png',\n",
     "\t# \t\tdpi = 150, bbox_inches = 'tight')\n",
     "\t\t\t"
    ]
