--- a/polygon_analysis.ipynb
+++ b/polygon_analysis.ipynb
@@ -752,7 +752,7 @@
     "fig1 = plt.figure(figsize=(10,10))\n",
     "plt.imshow(mean_prob, cmap = 'jet')\n",
     "plt.axis('off')\n",
-    "plt.savefig('figures/Para prediction probability.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/Para prediction probability.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -3410,7 +3410,7 @@
     "# plt.xlim(-100, 2000)\n",
     "# plt.ylim(0, 170)\n",
     "plt.grid(True)\n",
-    "plt.savefig('figures/polygon_area_sum_per_bin.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/polygon_area_sum_per_bin.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -3632,7 +3632,7 @@
     "# plt.xlim(-100, 2000)\n",
     "# plt.ylim(0, 170)\n",
     "plt.grid(True)\n",
-    "plt.savefig('figures/polygon_bin_area.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/polygon_bin_area.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -3703,7 +3703,7 @@
     "# plt.xlim(-100, 2000)\n",
     "# plt.ylim(0, 170)\n",
     "plt.grid(True)\n",
-    "plt.savefig('figures/polygon_cumulative_area.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/polygon_cumulative_area.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -3870,7 +3870,7 @@
     "# plt.xlim(-100, 2000)\n",
     "# plt.ylim(0, 170)\n",
     "ax1.grid(True)\n",
-    "plt.savefig('figures/polygon_analysis.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/polygon_analysis.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -3930,7 +3930,7 @@
     "# plt.xlim(-100, 2000)\n",
     "# plt.ylim(0, 170)\n",
     "ax1.grid(True)\n",
-    "plt.savefig('figures/polygon_analysis_percentage.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/polygon_analysis_percentage.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -4006,7 +4006,7 @@
     "ax.set_xlabel('Polygon size (pixels)')\n",
     "ax.set_xlim([-500, 53000])\n",
     "\n",
-    "plt.savefig('figures/polygon_analysis_percentage_split1.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('output/figures/polygon_analysis_percentage_split1.png', dpi=150, bbox_inches='tight')\n",
     "\n",
     "plt.figure(figsize = (15,5))\n",
     "fig, ax = plt.subplots()\n",
@@ -4047,7 +4047,7 @@
     "\n",
     "ax.set_ylim([0.0, 20])\n",
     "ax2.set_ylim([0.0, 100])\n",
-    "plt.savefig('figures/polygon_analysis_percentage_split2.png', dpi=150, bbox_inches='tight')"
+    "plt.savefig('output/figures/polygon_analysis_percentage_split2.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
