--- a/check_label2.ipynb
+++ b/check_label2.ipynb
@@ -153,7 +153,7 @@
     "plt.imshow(label_not_independent[...,1], cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -189,7 +189,7 @@
     "plt.imshow(label_independent[...,1], cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
     "\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -435,7 +435,7 @@
     "plt.figure(figsize=(15,15))\n",
     "plt.imshow(difference_past_deforestation, cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -472,7 +472,7 @@
     "plt.imshow(past_deforestation_not_independent.astype(np.int8)-past_deforestation_independent.astype(np.int8), \n",
     "    cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -572,7 +572,7 @@
     "plt.figure(figsize=(20,20))\n",
     "plt.imshow(difference_current_deforestation, cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   }
  ],
