--- a/check_label_buffer.ipynb
+++ b/check_label_buffer.ipynb
@@ -793,7 +793,7 @@
     "plt.imshow(label_mask_not_independent, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -829,7 +829,7 @@
     "plt.imshow(label_mask, cmap=plt.cm.gray)\n",
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -917,7 +917,7 @@
     "# title_name = 'ResUnet'\n",
     "plt.axis('off')\n",
     "\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -1087,7 +1087,7 @@
     "plt.figure(figsize=(15,15))\n",
     "plt.imshow(difference_past_deforestation, cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -1124,7 +1124,7 @@
     "plt.imshow(past_deforestation_not_independent.astype(np.int8)-past_deforestation_independent.astype(np.int8), \n",
     "    cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
@@ -1224,7 +1224,7 @@
     "plt.figure(figsize=(20,20))\n",
     "plt.imshow(difference_current_deforestation, cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
-    "# plt.savefig('figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
+    "# plt.savefig('output/figures/Para' + title_name + ' error mask.png', dpi=150, bbox_inches='tight')"
    ]
   }
  ],
