MC dropout refactor

--- a/polygon_analysis.ipynb
+++ b/polygon_analysis.ipynb
@@ -29,7 +29,7 @@
     "import matplotlib\n",
     "\n",
     "from tifffile import imsave\n",
-    "import src.rasterHandler as rasterHandler\n"
+    "import src.rasterTools as rasterTools\n"
    ]
   },
   {
@@ -1777,7 +1777,7 @@
    "source": [
     "if georreferenced_save == True:\n",
     "\n",
-    "    pred_entropy_to_show_pad = rasterHandler.padForGeorreferencing(pred_entropy_to_show)\n",
+    "    pred_entropy_to_show_pad = rasterTools.padForGeorreferencing(pred_entropy_to_show)\n",
     "\n",
     "    ic(np.min(pred_entropy_to_show_pad), np.mean(pred_entropy_to_show_pad), np.max(pred_entropy_to_show_pad))\n",
     "\n",
@@ -1788,7 +1788,7 @@
     "    plt.axis('off')\n",
     "\n",
     "    produced_im_path = 'D:/Jorge/deforestation_uncertainty/figures/MT_uncertainty_georreferenced.tif'\n",
-    "    rasterHandler.GeoReference_Raster_from_Source_data(original_im_path, \n",
+    "    rasterTools.GeoReference_Raster_from_Source_data(original_im_path, \n",
     "                    np.expand_dims(pred_entropy_to_show_pad, axis=0).astype(np.float32), produced_im_path, bands = 1,\n",
     "                    nodata=-1)"
    ]
@@ -1801,8 +1801,8 @@
    "source": [
     "if georreferenced_save == True:\n",
     "    produced_im_path = 'D:/Jorge/deforestation_uncertainty/figures/MT_false_positive_mask_georreferenced.tif'\n",
-    "    false_positive_mask_pad = rasterHandler.padForGeorreferencing(false_positive_mask, pad_value = 255)\n",
-    "    rasterHandler.GeoReference_Raster_from_Source_data(original_im_path, \n",
+    "    false_positive_mask_pad = rasterTools.padForGeorreferencing(false_positive_mask, pad_value = 255)\n",
+    "    rasterTools.GeoReference_Raster_from_Source_data(original_im_path, \n",
     "                    np.expand_dims(false_positive_mask_pad, axis=0).astype(np.uint8), produced_im_path, bands = 1,\n",
     "                    nodata=255, dtype = rasterio.uint8)"
    ]
@@ -1815,22 +1815,22 @@
    "source": [
     "if georreferenced_save == True:\n",
     "\n",
-    "    label_mask_pad = rasterHandler.padForGeorreferencing(label_mask, pad_value = 255)\n",
+    "    label_mask_pad = rasterTools.padForGeorreferencing(label_mask, pad_value = 255)\n",
     "    label_mask_pad.dtype\n",
     "\n",
     "    produced_im_path = 'D:/Jorge/deforestation_uncertainty/figures/MT_ground_truth_georreferenced.tif'\n",
-    "    rasterHandler.GeoReference_Raster_from_Source_data(original_im_path, \n",
+    "    rasterTools.GeoReference_Raster_from_Source_data(original_im_path, \n",
     "                    np.expand_dims(label_mask_pad, axis=0).astype(np.uint8), produced_im_path, bands = 1,\n",
     "                    nodata=255, dtype = rasterio.uint8)\n",
     "\n",
-    "    predicted_pad = rasterHandler.padForGeorreferencing(predicted, pad_value = 255)\n",
+    "    predicted_pad = rasterTools.padForGeorreferencing(predicted, pad_value = 255)\n",
     "    predicted_pad.dtype\n",
     "    predicted_pad[label_mask_pad == 2] = 2\n",
     "\n",
     "    ic(np.unique(predicted_pad, return_counts=True))\n",
     "\n",
     "    produced_im_path = 'D:/Jorge/deforestation_uncertainty/figures/MT_predicted_georreferenced.tif'\n",
-    "    rasterHandler.GeoReference_Raster_from_Source_data(original_im_path, \n",
+    "    rasterTools.GeoReference_Raster_from_Source_data(original_im_path, \n",
     "                    np.expand_dims(predicted_pad, axis=0).astype(np.uint8), produced_im_path, bands = 1,\n",
     "                    nodata=255, dtype = rasterio.uint8)\n",
     "\n",
@@ -1846,22 +1846,22 @@
     "\n",
     "if georreferenced_save == True:\n",
     "\n",
-    "    im_t0_pad = rasterHandler.padForGeorreferencingChannels(image_stack[...,[3,2,1]])\n",
+    "    im_t0_pad = rasterTools.padForGeorreferencingChannels(image_stack[...,[3,2,1]])\n",
     "    im_t0_pad = np.transpose(im_t0_pad, (2, 0, 1))\n",
     "    print(np.min(image_stack[...,[13,12,11]]), np.mean(image_stack[...,[13,12,11]]), np.max(image_stack[...,[13,12,11]]))\n",
     "\n",
     "\n",
     "    produced_im_path = 'D:/Jorge/deforestation_uncertainty/figures/MT_sentinel2_2019_rgb_georreferenced.tif'\n",
-    "    rasterHandler.GeoReference_Raster_from_Source_data(original_im_path, \n",
+    "    rasterTools.GeoReference_Raster_from_Source_data(original_im_path, \n",
     "                    im_t0_pad.astype(np.float32), produced_im_path, bands = 3,\n",
     "                    nodata=-1)\n",
     "\n",
-    "    im_t1_pad = rasterHandler.padForGeorreferencingChannels(image_stack[...,[13,12,11]])\n",
+    "    im_t1_pad = rasterTools.padForGeorreferencingChannels(image_stack[...,[13,12,11]])\n",
     "    im_t1_pad = np.transpose(im_t1_pad, (2, 0, 1))\n",
     "    print(im_t1_pad.shape)\n",
     "\n",
     "    produced_im_path = 'D:/Jorge/deforestation_uncertainty/figures/MT_sentinel2_2020_rgb_georreferenced.tif'\n",
-    "    rasterHandler.GeoReference_Raster_from_Source_data(original_im_path, \n",
+    "    rasterTools.GeoReference_Raster_from_Source_data(original_im_path, \n",
     "                    im_t1_pad.astype(np.float32), produced_im_path, bands = 3,\n",
     "                    nodata=-1)\n",
     "    "
@@ -1896,10 +1896,10 @@
     "\n",
     "\n",
     "if georreferenced_save == True:\n",
-    "    uncertainty_mask_pad = rasterHandler.padForGeorreferencingChannels(uncertainty_mask)\n",
+    "    uncertainty_mask_pad = rasterTools.padForGeorreferencingChannels(uncertainty_mask)\n",
     "    uncertainty_mask_pad = np.transpose(uncertainty_mask_pad, (2, 0, 1))\n",
     "\n",
-    "    uncertainty_mask_without_small_polygons_pad = rasterHandler.padForGeorreferencingChannels(\n",
+    "    uncertainty_mask_without_small_polygons_pad = rasterTools.padForGeorreferencingChannels(\n",
     "        uncertainty_mask_without_small_polygons)\n",
     "    uncertainty_mask_without_small_polygons_pad = np.transpose(\n",
     "        uncertainty_mask_without_small_polygons_pad, (2, 0, 1))"
