Fix inference grid

--- a/inference_grid.ipynb
+++ b/inference_grid.ipynb
@@ -106,6 +106,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -225,7 +232,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time:  0\n"
+      "time:  0\n",
+      "time:  1\n",
+      "time:  2\n",
+      "time:  3\n",
+      "time:  4\n",
+      "time:  5\n",
+      "time:  6\n",
+      "time:  7\n",
+      "time:  8\n",
+      "time:  9\n",
+      "(54236371,)\n",
+      "(array([0, 1], dtype=uint8), array([53470765,   765606], dtype=int64))\n",
+      "(17730, 9200)\n",
+      "(array([0., 1.], dtype=float32), array([161642061,   1473939], dtype=int64))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| self.predicted_unpad.shape: (17730, 9200)\n",
+      "    self.predicted.shape: (17730, 9200)\n",
+      "ic| predicted_test.shape: (81558000,)\n",
+      "ic| predicted_test.shape: (54236371,)\n"
      ]
     }
    ],
